Updated the demo notebook with new logger

--- a/primo/demo/PRIMO - Example_1.ipynb
+++ b/primo/demo/PRIMO - Example_1.ipynb
@@ -2274,7 +2274,7 @@
     "from primo.data_parser.input_parser import InputParser \n",
     "from primo.opt_model.opt_model import OptModel\n",
     "from primo.utils.setup_arg_parser import parse_args\n",
-    "from primo.utils.setup_logger import setup_logger\n",
+    "from primo.utils.setup_logger import setup_logger, LogLevel\n",
     "import pandas as pd\n",
     "\n",
     "\n",
@@ -2299,7 +2299,7 @@
     "args = parse_args(arg_list)\n",
     "\n",
     "# Set up logger\n",
-    "setup_logger(args.log_file, args.verbose, args.output_to_console)\n",
+    "setup_logger(LogLevel.WARNING, False)\n",
     "\n",
     "parser = InputParser(args)\n",
     "opt_inputs = parser.parse_data(mobilization_costs)\n",
